2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-verbose): Change its default value to nil.
	(w3m-message): When `w3m-verbose' is nil, display messages without
	logging.
	(w3m-make-help-echo, w3m-toggle-inline-image, w3m-zoom-in-image,
	w3m-zoom-out-image, w3m-view-this-url, w3m-submit-form,
	w3m-view-image, w3m-save-image, w3m-view-url-with-external-browser,
	w3m-download-this-url, w3m-print-this-url, w3m-edit-current-url,
	w3m-edit-this-url, w3m-quit, w3m-goto-ftp-url, w3m-select-buffer,
	w3m-select-buffer-show-this-line,
	w3m-select-buffer-show-this-line-and-switch): Call `w3m-image'
	instead of `w3m-display-message'.

	* w3m-util.el (w3m-display-message): Removed.
	(w3m-display-message-enable-logging): Abolished.

2003-11-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-message): Silent when the cursor is in minibuffer.

	* w3m-util.el (w3m-display-message): Ditto.

2003-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-html-string-regexp): Fix my fault; enclose it with
	`eval-and-compile' which is needed for compiling since it is used
	in a macro.

2003-11-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-real-url): New function.
	(shimbun-content-type, shimbun-url-exists-p): Removed.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Call
	`shimbun-real-url' instead of calling `w3m-attributes' directly.

2003-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Extract a
	timestamp from the index page for okuyami and shasetsu groups;
	don't use `w3m-current-url' (temporally).

2003-11-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-wait-process): Invert the return value
	of sit-for() that waits an asynchronous process.
	(w3m-process-kill-process): Relax the condition that checks
	whether a given process has already finished or not.

2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>
